gateway/httproute-coderprabhu-ui.yaml
# coderprabhu.com + www -> coderprabhu-ui-backend:8080
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-coderprabhu-ui
spec:
  parentRefs:
  - name: allprojects-gateway
    sectionName: https
  hostnames:
  - coderprabhu.com
  - www.coderprabhu.com
  rules:
  - matches:
    - path: { type: PathPrefix, value: / }
    backendRefs:
    - name: coderprabhu-ui-backend
      port: 8080
