gateway/httproute-tornacampsites-gym.yaml
# gym.tornacampsites.com -> rentalui-gym:5178
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-tornacampsites-gym
spec:
  parentRefs:
  - name: allprojects-gateway
    sectionName: https
  hostnames:
  - gym.tornacampsites.com
  rules:
  - matches:
    - path: { type: PathPrefix, value: / }
    backendRefs:
    - name: rentalui-gym
      port: 5178
