gateway/httproute-tornacampsites-hospitality.yaml
# hospitality.tornacampsites.com -> rentalui-hospitality:5177
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-tornacampsites-hospitality
spec:
  parentRefs:
  - name: allprojects-gateway
    sectionName: https
  hostnames:
  - hospitality.tornacampsites.com
  rules:
  - matches:
    - path: { type: PathPrefix, value: / }
    backendRefs:
    - name: rentalui-hospitality
      port: 5177
