gateway/httproute-tornacampsites-jewelry.yaml
# jewelry.tornacampsites.com -> rentalui-jewelry:5173
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-tornacampsites-jewelry
spec:
  parentRefs:
  - name: allprojects-gateway
    sectionName: https
  hostnames:
  - jewelry.tornacampsites.com
  rules:
  - matches:
    - path: { type: PathPrefix, value: / }
    backendRefs:
    - name: rentalui-jewelry
      port: 5173
