gateway/httproute-tornacampsites-newapi.yaml
# newapi.tornacampsites.com -> camp-newapi-backend:8080
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-tornacampsites-newapi
spec:
  parentRefs:
  - name: allprojects-gateway
    sectionName: https
  hostnames:
  - newapi.tornacampsites.com
  rules:
  - matches:
    - path: { type: PathPrefix, value: / }
    backendRefs:
    - name: camp-newapi-backend
      port: 8080
