gateway/httproute-tornacampsites-rentalapi.yaml
# rentalapi.tornacampsites.com -> rentalapi-backend:8080
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-tornacampsites-rentalapi
spec:
  parentRefs:
  - name: allprojects-gateway
    sectionName: https
  hostnames:
  - rentalapi.tornacampsites.com
  rules:
  - matches:
    - path: { type: PathPrefix, value: / }
    backendRefs:
    - name: rentalapi-backend
      port: 8080
