gateway/httproute-tornacampsites-ui.yaml
# tornacampsites.com + www -> new-camp-ui-backend:8080
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-tornacampsites-ui
spec:
  parentRefs:
  - name: allprojects-gateway
    sectionName: https
  hostnames:
  - tornacampsites.com
  - www.tornacampsites.com
  rules:
  - matches:
    - path: { type: PathPrefix, value: / }
    backendRefs:
    - name: new-camp-ui-backend
      port: 8080
