gateway/httproute-whatsgoodonmenu-api.yaml
# api.whatsgoodonmenu.com -> menu-api-backend:8080
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-whatsgoodonmenu-api
spec:
  parentRefs:
  - name: allprojects-gateway
    sectionName: https
  hostnames:
  - api.whatsgoodonmenu.com
  rules:
  - matches:
    - path: { type: PathPrefix, value: / }
    backendRefs:
    - name: menu-api-backend
      port: 8080
